@@ -39,6 +39,7 @@
         <a href="#LINK_OUTCOMMENT">OUTCOMMENT</a>
         <a href="#LINK_COMMENTFONT">COMMENTFONT</a>
         <a href="#LINK_COMMENTPOS">COMMENTPOS</a>
+        <a href="#LINK_SPLITPOS">SPLITPOS</a>
         <a href="#LINK_COLORS">*COLOR</a>
         <a href="#LINK_INFOURL">INFOURL</a>
         <a href="#LINK_OVERLIBGRAPH">OVERLIBGRAPH</a>
