@@ -41,6 +41,7 @@
                 <xi:include href="link_outcomment.xml"/>
                 <xi:include href="link_commentfont.xml"/>
                 <xi:include href="link_commentpos.xml"/>
+                <xi:include href="link_splitpos.xml"/>
             <xi:include href="link_colours.xml" />
 	    	  <xi:include href="link_infourl.xml"/>
 	    	  <xi:include href="link_overlibgraph.xml"/>
