@@ -1,0 +1,15 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<configentry>
+	<keyword>SPLITPOS</keyword>
+	<scope>LINK</scope>
+	<anchor>LINK_SPLITPOS</anchor>
+    <definition>SPLITPOS <meta>position</meta></definition>
+    <description xmlns="http://www.w3.org/1999/xhtml">
+ <p>Specify the position along the link used for drawing the INCOMMENT and OUTCOMMENT text.</p>
+	XXX - fixme
+                    <changes>
+                <change version="0.95">Added SPLITPOS</change>
+                </changes>
+        
+    </description>
+</configentry>
